<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.splash.SplashActivity"
    app:layoutDescription="@xml/activity_splash_scene">

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_logo"
        android:contentDescription="@string/main_logo" />

    <TextView
        android:id="@+id/application_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        style="@style/TextTitle" />


    <TextView
        android:id="@+id/powered_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/powered_by"
        style="@style/TextLight" />

    <ImageView
        android:id="@+id/udacity_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_udacity"
        android:contentDescription="@string/udacity_logo" />

</androidx.constraintlayout.motion.widget.MotionLayout>