<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="viewModel"
            type="com.beebee.mybudget.screens.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/login_fragment"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:paddingHorizontal="@dimen/spacing_big"
        android:paddingVertical="@dimen/spacing_big"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <ImageView
            android:id="@+id/logo_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="1.0"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.16000003" />

        <TextView
            android:id="@+id/application_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextTitle"
            android:text="@string/welcome_to_app"
            android:alpha="1.0" />

        <EditText
            android:id="@+id/email"
            style="@style/Input"
            android:layout_marginTop="@dimen/spacing_normal"
            android:hint="@string/enter_email_hint"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:text="@={viewModel.emailText}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/application_name" />

        <EditText
            android:id="@+id/password"
            style="@style/Input"
            android:hint="@string/enter_your_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:text="@={viewModel.passwordText}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:text="@string/sign_in_to_continue"
            app:layout_constraintTop_toBottomOf="@id/password"
            android:layout_marginTop="@dimen/spacing_normal" />

        <TextView
            android:id="@+id/dont_have_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextTitleSmall"
            android:textColor="@color/aqua"
            android:text="@string/dont_have_account"
            android:alpha="1.0" />

        <TextView
            android:id="@+id/powered_by"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/spacing_huge"
            app:layout_constraintTop_toBottomOf="@id/dont_have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/powered_by"
            style="@style/TextLight"
            android:alpha="1.0" />

        <ImageView
            android:id="@+id/udacity_logo"
            app:layout_constraintTop_toBottomOf="@id/powered_by"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_udacity"
            android:alpha="1.0"
            android:contentDescription="@string/udacity_logo" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>