<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/expense_fragment"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:padding="@dimen/spacing_normal">

            <ImageView
                android:id="@+id/empty_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_money"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:contentDescription="@string/empty_expenses" />

            <TextView
                android:id="@+id/empty_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextTitleNormal"
                android:text="@string/oh_no_it_s_empty"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/spacing_normal"
                app:layout_constraintTop_toBottomOf="@id/empty_image" />

            <TextView
                android:id="@+id/empty_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextTitleNormal"
                android:visibility="gone"
                android:text="@string/add_budget_empty"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/empty_title" />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/budget_list"
                android:visibility="gone"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/budget_item"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="@dimen/spacing_small"
                android:layout_marginBottom="@dimen/spacing_normal"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabs_budget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:backgroundTint="@color/aqua"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/spacing_big"
            android:contentDescription="@string/add_budget"
            app:srcCompat="@drawable/ic_baseline_add_24"
            app:tint="@color/white" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>